 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

February 3 2010, Shigio YAMAGUCHI

	* Use invisible temporary files instead of visible files (htags/assoc.c).

February 1 2010, Hideki IWAMOTO

	* Added built-in parser to improve the performance of making tag files.

	  When the built-in parser is used, the source files are parsed only once. 
	  The candidate of reference and other symbols are written to the temporary
	  file in Pass1, and read in Pass2.

	Pass 1:
	                             +-------+ 
	  source files =============>| gtags |============> GTAGS
	                             |       |============> GPATH
	                             |       | tag record
	                             |       |============> temporary file
	                             +-------+
	Pass 2:
	                 tag record  +-------+
	 temporary file ============>| gtags |============> GRTAGS
	                             |       |
	          GTAGS ============>|       |============> GSYMS
	                             +-------+

February 18 2009, Shigio YAMAGUCHI

	* Rewrote the stack in libutil/find.c using the varray (libutil/varray.c)
	  instead of static array.
	* Changed gtags(1) not to do useless inspection for the files in the
	  directories which are listed in the skip list.

September 27 2008, by Shigio YAMAGUCHI

	* Changed the default cache size of DB library from 5M to 50M bytes.
	* Recovered the code in which pread/pwrite is used in BSD db library.
	  However, this code is not automatically used. To include the code,
	  please invoke configure script with the --with-pread-pwrite option.
	  The original code was written by Hideki IWAMOTO.

July 14 2008, by Shigio YAMAGUCHI
