@@ -11,3 +11,5 @@ gtags.conf
 stamp-h1
 global-*.tar.gz
 elc-stamp
+libtool
+libltdl
