@@ -18,7 +18,8 @@ INCLUDES = @INCLUDES@
 
 LDADD = @LDADD@
 
-global_DEPENDENCIES = $(LDADD)
+global_LDADD = $(LDADD) $(LIBLTDL)
+global_DEPENDENCIES = $(LDADD) $(LTDLDEPS)
 
 man_MANS = global.1
 
